Closed Bug 584642 Opened 14 years ago Closed 14 years ago

JM: (64-bit) "Assertion failure: masm.differenceBetween(pic.shapeGuard, dbgInlineJumpOffset) == BINDNAME_INLINE_JUMP_OFFSET,"

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Unassigned)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(1 file)

Function("x=[(x)=s]")()

asserts 64-bit js debug shell on JM changeset 6347cf00d3ab with -m at Assertion failure: masm.differenceBetween(pic.shapeGuard, dbgInlineJumpOffset) == BINDNAME_INLINE_JUMP_OFFSET, at ../methodjit/Compiler.cpp:2810
Allows the inline jump offset to be variable for x86_64. Easy fix.
Attachment #463099 - Flags: review?(dvander)
Attachment #463099 - Flags: review?(dvander) → review+
http://hg.mozilla.org/users/danderson_mozilla.com/moo/rev/30020eca122b
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/pic/bug584642.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: