[JAEGER] Un-constify BindName's inline jump offset. b=584642, r=dvander.